--- a/views/Header.html
+++ b/views/Header.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<!--
-    Hcode Store by hcode.com.br
--->
+
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
@@ -42,8 +40,13 @@
                     <ul>
                         <li><a href="#"><i class="fa fa-user"></i> Minha Conta</a></li>
                         <li><a href="#"><i class="fa fa-heart"></i> Lista de Desejos</a></li>
-                        <li><a href="#"><i class="fa fa-shopping-cart"></i> Meu Carrinho</a></li>
-                        <li><a href="#"><i class="fa fa-lock"></i> Login</a></li>
+                        <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Meu Carrinho</a></li>
+                        {if="checkLogin(false)"}
+                        <li><a href="/profile"><i class="fa fa-user"></i>{function="getUserName()"}</a></li>
+                        <li><a href="/logout"><i class="fa fa-close"></i> Sair</a></li>
+                        {else}
+                        <li><a href="/login"><i class="fa fa-lock"></i> Login</a></li>
+                        {/if}
                     </ul>
                 </div>
             </div>
